# pjh_json

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  benchmark_test.cpp  rapidjson_patch.cmake
docs/: readme_en.md  readme_zh.md
docs/design/en/: 00_overview_en.md  01_simd_optimization_en.md  02_zero_copy_ownership_en.md  03_inplace_construction_en.md  04_fast_slow_paths_en.md  05_memory_resource_en.md  06_string_parsing_en.md  07_number_and_literal_en.md  08_object_array_layout_en.md
docs/design/zh/: 00_overview_zh.md  01_simd_optimization_zh.md  02_zero_copy_ownership_zh.md  03_inplace_construction_zh.md  04_fast_slow_paths_zh.md  05_memory_resource_zh.md  06_string_parsing_zh.md  07_number_and_literal_zh.md  08_object_array_layout_zh.md
examples/: CMakeLists.txt
examples/01_basic/: array_object.cpp  parse_dump.cpp
examples/02_advanced/: constexpr_literal.cpp  custom_memory.cpp  file_io.cpp  serialization.cpp
include/pjh_json/: array.hpp  config.hpp  document.hpp  error.hpp  json.hpp  json_constexpr.hpp  json_fwd.hpp  literal.hpp  object.hpp  parser.hpp  string.hpp  utils.hpp  validate.hpp  writer.hpp
src/: array.cpp  config.cpp  counting_resource.hpp  document.cpp  json.cpp  object.cpp
src/parser/: array.cpp  internal.hpp  literal.cpp  number.cpp  object.cpp  parse.cpp  stage1.cpp  stage2.cpp  string.cpp  utils.cpp  value.cpp
src/writer/: dump.cpp  jsonl.cpp  string.cpp
tests/: CMakeLists.txt  config_document.cpp  constexpr_json_test.cpp  hello_world.cpp  json_parser.cpp  json_types.cpp  json_writer.cpp  literal_test.cpp  read_file.cpp  test_main.cpp
